--- a/package.json
+++ b/package.json
@@ -3,14 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react-router-dom": "^5.1.2",
-    "html-react-parser": "^5.1.10",
+    "@material-ui/core": "^4.12.1",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.58",
+    "@material-ui/pickers": "^3.2.10",
+    "@material-ui/styles": "^4.11.4",
+    "@mui/base": "^5.0.0-beta.40",
+    "@mui/system": "^6.0.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^4.20.7",
+    "connected-react-router": "^6.5.2",
+    "firebase": "^10.13.1",
+    "history": "^4.10.1",
+    "html-react-parser": "^5.1.10",
+    "prop-types": "^15.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^7.2.0",
+    "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^5.1.2",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "5.0.1",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
+    "redux-timer": "^1.1.3",
+    "secure-ls": "^1.2.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
