--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.20.7",
+    "bootstrap": "^5.3.3",
     "connected-react-router": "^6.5.2",
     "firebase": "^10.13.1",
     "history": "^4.10.1",
     "html-react-parser": "^5.1.10",
     "prop-types": "^15.7.2",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-redux": "^7.2.0",
     "react-responsive-carousel": "^3.2.23",
