--- a/package.json
+++ b/package.json
@@ -4,12 +4,10 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.1",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.58",
-    "@material-ui/pickers": "^3.2.10",
-    "@material-ui/styles": "^4.11.4",
-    "@mui/base": "^5.0.0-beta.40",
-    "@mui/system": "^6.0.2",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.1",
+    "@mui/styles": "^6.1.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -21,7 +19,6 @@
     "html-react-parser": "^5.1.10",
     "prop-types": "^15.7.2",
     "react": "^18.3.1",
-    "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-redux": "^7.2.0",
     "react-responsive-carousel": "^3.2.23",
