--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@material-ui/core": "^4.12.1",
+    "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.1",
     "@mui/styles": "^6.1.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@toolpad/core": "^0.7.0",
     "antd": "^4.20.7",
     "bootstrap": "^5.3.3",
     "connected-react-router": "^6.5.2",
